@@ -50,4 +50,11 @@ set PHP_BIN=C:\PHP\php.exe
 
 :SkipBinSearch
 
+echo Starting the Phoronix Test Suite
+set PTS_SILENT_MODE=1
+start /B %PHP_BIN% "%PTS_DIR%\pts-core\phoronix-test-suite.php" load_dynamic_result_viewer.start 2> NUL
+timeout /t 1 > NUL
+
+set PTS_SILENT_MODE=0
 %PHP_BIN% "%PTS_DIR%\pts-core\phoronix-test-suite.php" %*
+taskkill /F /IM php.exe > NUL
